# NMPDE-labs

lab-01/: CMakeCache.txt  Makefile  cmake_install.cmake
lab-01/src/: Poisson1D.cpp  Poisson1D.hpp  exercise-01.cpp  exercise-02.cpp
lab-02/: CMakeLists.txt
lab-02/src/: Poisson2D.cpp  Poisson2D.hpp  exercise-01.cpp
lab-03/src/: exercise-01.cpp
